--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "Personal Website",
+  "name": "nicyantzi.github.io",
   "version": "1.0.0",
-  "description": "Personal Website - Nic Yantzi",
+  "description": "Nic Yantzi's Personal Website",
   "main": "gulpfile.js",
+  "dependencies": {
+    "gulp": "^3.9.1"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.12",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-util": "^3.0.8"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Nic Yantzi",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicyantzi/nicyantzi.github.io.git"
+  },
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^2.18.5",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-pug": "^3.2.0",
-    "gulp-sass": "^3.0.0",
-    "gulp-util": "^3.0.8"
-  }
+  "bugs": {
+    "url": "https://github.com/nicyantzi/nicyantzi.github.io/issues"
+  },
+  "homepage": "https://github.com/nicyantzi/nicyantzi.github.io#readme"
 }
